--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -20,30 +20,26 @@
 					<div class="container">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="#">
-								<img src="images/logo.svg" /> PizzaLand
+								<img src="images/logo.svg" /> Chatisfaction
 							</a>
 						</div>
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#" class="homeLink">La carte</a></li>
-							<li><a href="#" class="addPizzaLink">Ajouter une Pizza</a></li>
+							<li><a href="#" class="abonner">S'abonner</span></a></li>
+							<li><a href="#" class="box">La Box</span></a></li>
+							<li><a href="#" class="connecter">Se connecter / S'incrire</span></a></li>
 						</ul>
 					</div>
 				</nav>
-				<section class="newsContainer"></section>
 			</header>
-			<section class="row marketing">
-				<div class="col-lg-12">
-					<header class="pageTitle"></header>
-					<section class="media-list pizzasContainer">
-					</section>
-				</div>
-			</section>
 		</div>
+		<section class="pageTitle">
+			<h1>Chatisfaction</h1>
+		</section>
+		<section class="recherche">
+			<input class="form-control" type="text" placeholder="Search" aria-label="Search">
+		</section>
 	</main>
 	<footer>
-		Free photos from <a href="https://unsplash.com/">Unsplash</a>
-		<br>
-		Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
 	</footer>
 </body>
 </html>
