first commit by Zizou ;)

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
 					<div class="container">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="#">
-								<img src="images/logo.svg" /> Chatisfaction
+								<img src="images/logo.svg" /> Chatisfait
 							</a>
 						</div>
 						<ul class="nav navbar-nav navbar-right">
