--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -24,9 +24,9 @@
 							</a>
 						</div>
 						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#" class="abonner">S'abonner</span></a></li>
-							<li><a href="#" class="box">La Box</span></a></li>
-							<li><a href="#" class="connecter">Se connecter / S'incrire</span></a></li>
+							<li><a href="#" class="abonner">S'abonner</a></li>
+							<li><a href="#" class="box">La Box/a></li>
+							<li><a href="#" class="connecter">Se connecter / S'incrire</a></li>
 						</ul>
 					</div>
 				</nav>
