--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -33,7 +33,7 @@
 			</header>
 		</div>
 		<section class="pageTitle">
-			<h1>Chatisfaction</h1>
+			<h1>Chatisfait</h1>
 		</section>
 		<section class="recherche">
 			<input class="form-control" type="text" placeholder="Search" aria-label="Search">
