--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
 						</div>
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#" class="abonner">S'abonner</a></li>
-							<li><a href="#" class="box">La Box/a></li>
+							<li><a href="#" class="box">La Box</a></li>
 							<li><a href="#" class="connecter">Se connecter / S'incrire</a></li>
 						</ul>
 					</div>
