--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>PizzaLand</title>
+	<title>Chatisfait</title>
 
 	<link rel="stylesheet" type="text/css" href="css/flatly-bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -20,7 +20,7 @@
 					<div class="container">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="#">
-								<img src="images/logo.svg" /> Chatisfait
+								<img src="images/chat.png" /> Chatisfait
 							</a>
 						</div>
 						<ul class="nav navbar-nav navbar-right">
