click actif + sprint

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -28,16 +28,21 @@
 							<li><a href="#" class="box">La Box</a></li>
 							<li><a href="#" class="connecter">Se connecter / S'incrire</a></li>
 						</ul>
+						<input class="form-control" type="text" placeholder="Search" aria-label="Search"></input>
+						<br>
+						<br>
 					</div>
 				</nav>
+				
 			</header>
 		</div>
+		<br>
+		<br>
 		<section class="pageTitle">
 			<h1>Chatisfait</h1>
 		</section>
-		<section class="recherche">
-			<input class="form-control" type="text" placeholder="Search" aria-label="Search">
-		</section>
+		<section class="contenu">
+			</section>
 	</main>
 	<footer>
 	</footer>
