--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -28,6 +28,7 @@
 							<li><a href="#" class="box">La Box</a></li>
 							<li><a href="#" class="connecter">Se connecter / S'incrire</a></li>
 							<li><a href="#" class="about">Qui Sommes Nous ?</a></li>
+							<li><a href="#" class="panier"><img id="imgpanier" src="images/panier.png"/>Mon panier</a></li>
 						</ul>
 						<input class="form-control" type="text" placeholder="Search" aria-label="Search"></input>
 						<br>
