--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -29,6 +29,7 @@
 							<li><a href="#" class="connecter">Se connecter / S'incrire</a></li>
 							<li><a href="#" class="about">Qui Sommes Nous ?</a></li>
 							<li><a href=""  class="articles">Articles</a></li> 
+							<li><a href=""  class="ajoutarticle">AjouterArticle</a></li> 
 							<li><a href="#" class="panier"><img id="imgpanier" src="images/panier.png"/>Mon panier</a></li>
 						</ul>
 					</div>
