--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -26,7 +26,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li><a href="#" class="abonner">S'abonner</a></li>
 							<li><a href="#" class="box">La Box</a></li>
-							<li><a href="#" class="connecter">Se connecter / S'incrire</a></li>
+							<li><a href="#" class="connecter">Se connecter / S'inscrire</a></li>
 							<li><a href="#" class="about">Qui Sommes Nous ?</a></li>
 							<li><a href=""  class="articles">Articles</a></li> 
 							<li><a href=""  class="ajoutarticle">AjouterArticle</a></li> 
