--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -33,7 +33,7 @@
 							<li><a href="" class="connecter">Se connecter / S'inscrire</a></li>
 							<li><a href="" class="about">Qui Sommes Nous ?</a></li>
 							<li><a href=""  class="articles">Produits</a></li> 
-							<li><a href=""  class="ajoutarticle">AjouterArticle</a></li> 
+							<li><a href=""  class="ajoutarticle">GestionArticles</a></li> 
 							<li><a href="" class="panier"><img id="imgpanier" src="images/panier.png"/>Mon panier</a></li>
 						</ul>
 					</div>
