--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/addAbonnement.css"/>
 	<link rel="stylesheet" type="text/css" href="css/box.css" />
-	<link rel="stylesheet" type="text/css" href="listProduct/box.css" />
+	<link rel="stylesheet" type="text/css" href="css/listProduct.css" />
 	
 
 	<script src="build/main.bundle.js" defer ></script>
