liste users et modifs

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -33,9 +33,10 @@
 							<li><a href="" class="connecter">Se connecter / S'inscrire</a></li>
 							<li><a href="" class="about">Qui Sommes Nous ?</a></li>
 							<li><a href=""  class="articles">Produits</a></li> 
-							<li><a href=""  class="supparticle">SupprimerArticles</a></li> 
-							<li><a href=""  class="ajoutarticle">AjouterArticles</a></li>
-							<li><a hre=""  class="listeCommandes">Liste Commandes</a></li> 
+							<li><a href=""  class="supparticle">Supprimer des articles</a></li> 
+							<li><a href=""  class="ajoutarticle">Ajouter des articles</a></li>
+							<li><a href=""  class="listeCommandes">Liste des commandes</a></li> 
+							<li><a href=""  class="listeUsers">Liste des Utilisateurs</a></li>
 							<li><a href="" class="panier"><img id="imgpanier" src="images/panier.png"/>Mon panier</a></li>
 
 						</ul>
